# ghc-wasm-bindists

./: .gitignore  alpine-build.sh  flake.nix  ghc-wasm-bindists.cabal  meta.json
.github/actions/darwin-bindist/: action.yml
.github/workflows/: aarch64-linux-bindist.yml  ci.yml  darwin-bindist.yml  mirror.yml
app/: Main.hs
